--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My GitHub Page</title>
+  <title>Charlie's Print Shop</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 2rem;
-      background-color: #f0f0f0;
+      background-color: #f70f81f9;
       text-align: center;
     }
     h1 {
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <p>Welcome to my GitHub Pages website.</p>
+  <h1>Hello!</h1>
+  <p>Welcome to my Website</p>
 </body>
 </html>
