--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Charlie's Print Shop</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Didot, sans-serif;
       padding: 2rem;
-      background-color: #f70f81f9;
+      background-color: #f70f81f90;
       text-align: center;
     }
     h1 {
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <h1>Hello!</h1>
+  <h1>Charlie's Print Shop</h1>
   <p>Welcome to my Website</p>
 </body>
 </html>
