--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>Charlie's Print Shop</title>
   <style>
     body {
-      font-family: Didot, sans-serif;
+      font-family: "Didot", "Bodoni MT", Didot, serif;
       padding: 2rem;
-      background-color: #f70f81f90;
+      background-color: #f144f144f144;
       text-align: center;
     }
     h1 {
