--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     body {
       font-family: "Didot", "Bodoni MT", Didot, serif;
       padding: 2rem;
-      background-color: #f144f144f144;
+      background-color: #46515a;
       text-align: center;
     }
     h1 {
-      color: #333;
+      color: white;
     }
   </style>
 </head>
