--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
       padding: 2rem;
       background-color: #46515a;
       text-align: center;
+      color: white;
     }
     h1 {
       color: white;
+    }
+    img {
+      display: block;
+      margin: 0 auto 20px;
+      width: 300px;
+      border-radius: 12px;
     }
   </style>
 </head>
 <body>
   <h1>Charlie's Print Shop</h1>
-  <p>Welcome to my Website</p>
+  <p>3D-Print and Design Commisions</p>
+  <img src="rocket .png" alt="My Photo1">
 </body>
 </html>
