--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     img {
       display: block;
       margin: 0 auto 20px;
-      width: 300px;
+      width: 500px;
       border-radius: 12px;
     }
   </style>
@@ -25,6 +25,7 @@
 <body>
   <h1>Charlie's Print Shop</h1>
   <p>3D-Print and Design Commisions</p>
-  <img src="rocket .png" alt="My Photo1">
+  <img src="rocket .png" alt="Rocket">
+  <img src="IMG_3566.jpg" alt="My1">
 </body>
 </html>
