--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       background-color: #46515a;
       text-align: center;
       color: white;
+      font-size: 30px;
     }
     h1 {
       color: white;
