--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
       width: 500px;
       border-radius: 12px;
     }
+    .image-row {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 20px 0;
+    }
+
+    .image-row img {
+      width: 400px;
+      border-radius: 12px;
   </style>
 </head>
 <body>
