--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 <body>
   <h1>Charlie's Print Shop</h1>
   <p>3D-Print and Design Commisions</p>
-  <img src="rocket .png" alt="Rocket">
-  <img src="IMG_3566.jpg" alt="My1">
+   <div class="image-row">
+     <img src="rocket .png" alt="Rocket">
+     <img src="IMG_3566.jpg" alt="My1">
+  </div>
+
 </body>
 </html>
