--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Charlie's Print Shop</title>
+  <title>Big Dick's Print Shop</title>
   <style>
     body {
       font-family: "Didot", "Bodoni MT", Didot, serif;
