--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>Charlie's Print Shop</h1>
+  <h1>Big Dick's Print Shop</h1>
   <p>3D-Print and Design Commisions</p>
    <div class="image-row">
      <img src="rocket .png" alt="Rocket">
