--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     img {
       display: block;
       margin: 0 auto 20px;
-      width: 500px;
+      width: = 450px;
       border-radius: 12px;
     }
     .image-row {
@@ -40,7 +40,8 @@
   <p>3D-Print and Design Commisions</p>
    <div class="image-row">
      <img src="rocket .png" alt="Rocket">
-     <img src="IMG_3566.jpg" alt="My1"> 
+     <img src="IMG_3566.jpg" alt="Coffee">
+     <img src="67340075157__FC964878-CF50-4A96-A0AA-0D09BEEF69C7.jpg" alt="jet">
    </div>
   
 </body>
