--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     }
 
     .image-row img {
-      width: 400px;
+      width: 350px;
+      height: 200px;
       border-radius: 12px;
     }
     
