--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     }
 
     .image-row img {
-      max-width: 100%;    /* scale down if container is smaller */
+      max-width: auto;    /* scale down if container is smaller */
       height: auto;       /* auto-adjust height to keep aspect ratio */
       border-radius: 12px;
     }
