--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     }
 
     .image-row img {
-      max-width: auto;    /* scale down if container is smaller */
-      height: auto;       /* auto-adjust height to keep aspect ratio */
+      width: auto;       /* natural width */
+      max-width: 300px;  /* don’t let it grow beyond 300px */
+      height: auto;      /* keep aspect ratio */
       border-radius: 12px;
     }
     
