--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
     .image-row img {
       width: auto;       /* natural width */
-      max-width: 300px;  /* don’t let it grow beyond 300px */
+      max-width: 320px;  /* don’t let it grow beyond 300px */
       height: auto;      /* keep aspect ratio */
       border-radius: 12px;
+      object-fit: contain;
     }
     
   </style>
