--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <div class="image-row">
      <img src="rocket .png" alt="Rocket">
      <img src="IMG_3566.jpg" alt="Coffee">
-     <img src="67340075157__FC964878-CF50-4A96-A0AA-0D09BEEF69C7.jpg" alt="jet">
+     <img src="jet.jpg" alt="jet">
    </div>
   
 </body>
