--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Big Dick's Print Shop</title>
   <style>
+    
     body {
       font-family: "Didot", "Bodoni MT", Didot, serif;
       padding: 2rem;
@@ -11,6 +12,7 @@
       text-align: center;
       color: white;
       font-size: 30px;
+      background-image: src="greybackround.webp" alt="grey";
     }
     h1 {
       color: white;
@@ -34,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>Big Dick's Print Shop</h1>
+  <h1><u>Charlie's Print Shop</u></h1>
   <p>3D-Print and Design Commisions</p>
    <div class="image-row">
      <img src="IMG_3566.jpg" alt="Coffee">
