--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Big Dick's Print Shop</title>
+  <title>CHarlie's Print Shop</title>
   <style>
     
     body {
@@ -12,7 +12,7 @@
       text-align: center;
       color: white;
       font-size: 30px;
-      background-image: src="greybackround.webp" alt="grey";
+      background-image: url('greybackround.webp');
     }
     h1 {
       color: white;
@@ -38,7 +38,9 @@
 <body>
   <h1><u>Charlie's Print Shop</u></h1>
   <p>3D-Print and Design Commisions</p>
-   <div class="image-row">
+   
+  
+  <div class="image-row">
      <img src="IMG_3566.jpg" alt="Coffee">
      <img src="rocket .png" alt="Rocket">
      <img src="jet.jpg" alt="jet">
