--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       height: auto;      /* keep aspect ratio */
       border-radius: 12px;
       object-fit: contain;
+      border: 5px solid white;
     }
     
   </style>
