--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CHarlie's Print Shop</title>
+  <title>Charlie's Print Shop</title>
   <style>
     
     body {
