--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       height: auto;      /* keep aspect ratio */
       border-radius: 12px;
       object-fit: contain;
-      border: 5px solid white wrap;
+      border: 5px solid white;
+      box-sizing: border-box;
     }
     
   </style>
