--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       object-fit: contain;
       border: 5px solid white;
       box-sizing: border-box;
+      object-fit: cover;
+      display: block;
     }
     
   </style>
