--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@
       border-radius: 12px;
       object-fit: contain;
       border: 5px solid white;
-      box-sizing: border-box;
-      object-fit: cover;
-      display: block;
     }
-
+    
      form {
       margin-top: 40px;
       font-size: 20px;
@@ -59,32 +56,27 @@
      <img src="rocket .png" alt="Rocket">
      <img src="jet.jpg" alt="jet">
    </div>
-
-  <form action="https://formspree.io/f/yourFormID" method="POST" enctype="multipart/form-data">
-    <label>
-      Name:<br>
-      <input type="text" name="name" required />
-    </label>
-
-    <label>
-      Address:<br>
-      <textarea name="address" rows="4" required></textarea>
-    </label>
-
-    <label>
-      Upload your STL file:<br>
-      <input type="file" name="stl_file" accept=".stl" required />
-    </label>
-
-    <button type="submit">Submit Order Info</button>
-  </form>
-
+  
+  <form
+  action="https://formspree.io/f/xqaqrrlb"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
   <div class="payment-section">
     <p>After submitting your info, please complete payment:</p>
     <a href="https://buy.stripe.com/YOUR_PAYMENT_LINK" target="_blank">
       <button>Pay Now</button>
     </a>
   </div>
-  
 </body>
 </html>
