--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 >
   <label>
     Your email:
-    <input type="email" name="email">
+    <input type="cbtharin@gmail.com" name="cbtharin@gmail.com">
   </label>
   <label>
     Your message:
-    <textarea name="message"></textarea>
+    <textarea name="Thank you!"></textarea>
   </label>
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
