--- a/index.html
+++ b/index.html
@@ -62,12 +62,16 @@
   method="POST"
 >
   <label>
-    Your email:
-    <input type="cbtharin@gmail.com" name="cbtharin@gmail.com">
+    Your Email:
+    <input type="youremail" name="youremail">
   </label>
   <label>
-    Your message:
-    <textarea name="Thank you!"></textarea>
+    Your Address:
+    <input type="youraddress" name="youraddress">
+  </label>
+  <label>
+    Your Name:
+    <textarea name="name"></textarea>
   </label>
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
