--- a/index.html
+++ b/index.html
@@ -71,10 +71,19 @@
   </label>
   <label>
     Your Name:
-    <textarea name="name"></textarea>
+    <input name="name"></input>
   </label>
+  <label>
+      Upload your STL file:<br>
+      <input type="file" name="stl_file" accept=".stl" required />
+    </label>
+  
+  
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
+
+
+
 </form>
   <div class="payment-section">
     <p>After submitting your info, please complete payment:</p>
