--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
     }
     
   </style>
-</head>
+
+<nav>
+  <a href="index.html">Home</a> |
+  <a href="about.html">About</a>
+</nav>
+
+
 <body>
   <h1><u>Charlie's Print Shop</u></h1>
   <p>3D-Print and Design Commisions</p>
@@ -102,10 +108,14 @@
     </a>
   </div>
 </body>
+
+
 <footer>
 	<p>Charle Tharin</p>
     <p>email: cbtharin@gmail.com</p>
     <p>phone: 702-292-3345</p>
     
 </footer>
+
+
 </html>
