--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
   <title>About - Charlie's Print Shop</title>
   <style>
     body {
-      font-family: "Didot", serif;
+       font-family: "Didot", "Bodoni MT", Didot, serif;
       padding: 2rem;
-      background-color: #46515a;
       color: white;
       text-align: center;
+      background-image: url('greybackround.webp');
     }
 
     a {
