--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <title>About - Charlie's Print Shop</title>
   <style>
     body {
-       font-family: "Didot", "Bodoni MT", Didot, serif;
+      font-family: "Didot", "Bodoni MT", Didot, serif;
       padding: 2rem;
       color: white;
       text-align: center;
@@ -24,5 +24,46 @@
   <p>We specialize in high-quality 3D printing and custom design commissions.</p>
 
   <p><a href="index.html">← Back to Home</a></p>
+
+  <form
+  action="https://formspree.io/f/xqaqrrlb"
+  method="POST"
+>
+  <label>
+    Your Email:
+    <input type="youremail" name="youremail">
+  </label>
+  <label>
+    Your Address:
+    <input type="youraddress" name="youraddress">
+  </label>
+  <label>
+    Your Name:
+    <input name="name"></input>
+  </label>
+  <label>
+      Upload your STL file:<br>
+      <input type="file" name="stl_file" accept=".stl" required />
+    </label>
+  
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+
+</form>
+  <div class="payment-section">
+    <p>After submitting your info, please complete payment:</p>
+    <a href="https://buy.stripe.com/YOUR_PAYMENT_LINK" target="_blank">
+      <button>Pay Now</button>
+    </a>
+  </div>
+</body>
+
+
+<footer>
+	<p>Charle Tharin</p>
+    <p>email: cbtharin@gmail.com</p>
+    <p>phone: 702-292-3345</p>
+    
+</footer>
 </body>
 </html>
