--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	
 <nav>
   <a href="index.html">Home</a> |
-  <a href="3D-Printing.html">3D-Printing</a>
+  <a href="3dprinting.html">3D-Printing</a>
 </nav>
 
 
