--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       height: auto;      /* keep aspect ratio */
       border-radius: 12px;
       object-fit: contain;
-      border: 5px solid white;
+      border: auto solid white;
     }
     
     form {
