--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       height: auto;      /* keep aspect ratio */
       border-radius: 12px;
       object-fit: contain;
-      border: auto solid white;
+      border: 3px solid white;
     }
     
     form {
@@ -68,7 +68,8 @@
 	
 <nav>
   <a href="index.html">Home</a> |
-  <a href="3dprinting.html">3D-Printing</a>
+  <a href="3dprinting.html">3D-Printing</a> |
+	<a href="design.html">Design</a>
 </nav>
 
 
