--- a/design.html
+++ b/design.html
@@ -83,7 +83,7 @@
 
 <hr> 
 <footer>
-	<p>Charle Tharin</p>
+	<p>Charlie Tharin</p>
     <p>email: cbtharin@gmail.com</p>
     <p>phone: 702-292-3345</p>
     
