--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -1,1 +1,94 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Design - Charlie's Print Shop</title>
+    <style>
+    
+    footer{
+          font-size: 20px;
+          background-color: #D3D3D3;
+          line-height: 0.2;
+          height: auto;
+          color: black;
+
+          border: 3px solid green;
+      }
+
+      body {
+        font-family: "Didot", "Bodoni MT", Didot, serif;
+        padding: 2rem;
+        background-color: #46515a;
+        text-align: center;
+        color: white;
+        font-size: 20px;
+        background-image: url('greybackround.webp');
+      }
+      h1 {
+        color: white;
+      }
+
+      .image-row {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin: 5px 0;
+      }
+
+      .image-row img {
+        width: auto;       /* natural width */
+        max-width: 410px;  /* don’t let it grow beyond 300px */
+        height: auto;      /* keep aspect ratio */
+        border-radius: 12px;
+        object-fit: contain;
+        border: 5px solid white;
+      }
+
+      form {
+        margin-top: 40px;
+        font-size: 20px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
+
+      nav {
+          background-color: #D3D3D3;
+          border: 3px solid green;
+          color: black;
+
+          }
+
+  </style>
+
+</head>
+<nav>
+	<p><a href="index.html">← Back to Home</a></p>
+
+</nav>
+
+<body>
+  <h1>Design Commisions </h1>
+ <p>contact me directly to discuss the production of a custom design</p>
+	<p></p>
+
+ 
+
+
+
+
+</body>
+
+<hr> 
+<footer>
+	<p>Charlie Tharin</p>
+    <p>email: cbtharin@gmail.com</p>
+    <p>phone: 702-292-3345</p>
+    
+</footer>
+
+
+</html>
