--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Design - Charlie's Print Shop</title>
+  <title>Associations</title>
     <style>
     
     footer{
