--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 <nav>
   <a href="index.html">Home</a> |
   <a href="3dprinting.html">3D-Printing</a> |
-	<a href="design.html">Design</a>
+  <a href="design.html">Design</a> |
+  <a href="connectionsripoff.html">|Assocications</a>
 </nav>
 
 
