--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -60,6 +60,20 @@
           border: 3px solid green;
           color: black;
 
+	 .grid-container {
+	  display: grid;
+	  grid-template-columns: auto auto auto;
+	  gap: 10px;
+	  background-color: dodgerblue;
+	  padding: 10px;
+	}
+	.grid-container > div {
+	  background-color: #f1f1f1;
+	  color: #000;
+	  padding: 10px;
+	  font-size: 30px;
+	  text-align: center;
+		      
           }
 
   </style>
@@ -71,9 +85,19 @@
 </nav>
 
 <body>
-  <h1>Design Commisions </h1>
- <p>contact me directly to discuss the production of a custom design</p>
+  
 	<p></p>
+<div class="grid-container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+  <div>4</div>
+  <div>5</div>
+  <div>6</div>
+  <div>7</div>
+  <div>8</div>
+  <div>9</div>
+</div>
 
  
 
