--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -60,14 +59,14 @@
           border: 3px solid green;
           color: black;
 
-	 .grid-container {
+ .grid-container {
 	  display: grid;
-	  grid-template-columns: auto auto auto;
+	  grid-template-columns: auto auto auto auto;
 	  gap: 10px;
 	  background-color: dodgerblue;
 	  padding: 10px;
 	}
-	.grid-container > div {
+.grid-container > div {
 	  background-color: #f1f1f1;
 	  color: #000;
 	  padding: 10px;
@@ -85,8 +84,11 @@
 </nav>
 
 <body>
-  
-	<p></p>
+<h1>Grid Container</h1>
+
+<p>A grid container contains one or more grid items arranged in columns and rows.</p>
+<p>Direct child elements(s) of the grid container automatically becomes grid items.</p>
+
 <div class="grid-container">
   <div>1</div>
   <div>2</div>
@@ -97,12 +99,15 @@
   <div>7</div>
   <div>8</div>
   <div>9</div>
+  <div>8</div>
+  <div>9</div>
+  <div>8</div>
+  <div>9</div>
+  <div>8</div>
+  <div>9</div>
+  <div>8</div>
+
 </div>
-
- 
-
-
-
 
 </body>
 
