--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -59,21 +59,22 @@
           border: 3px solid green;
           color: black;
 
- .grid-container {
-	  display: grid;
-	  grid-template-columns: auto auto auto auto;
-	  gap: 10px;
-	  background-color: dodgerblue;
-	  padding: 10px;
-	}
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  
+  gap: 10px;
+  background-color: dodgerblue;
+  padding: 10px;
+  align-content: space-evenly;
+}
 .grid-container > div {
-	  background-color: #f1f1f1;
-	  color: #000;
-	  padding: 10px;
-	  font-size: 30px;
-	  text-align: center;
-		      
-          }
+  background-color: #f1f1f1;
+  color: #000;
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+  
 
   </style>
 
