--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -89,7 +89,7 @@
 
 <audio controls autoplay>
   <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="gamemusic.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 	
