--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -87,7 +87,7 @@
 
 <body>
 
-<audio controls autoplay>
+<audio controls autoplay muted>
   <source src="gamemusic.mp3" type="audio/mpeg">
 </audio>
 	
