--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -119,20 +119,8 @@
   <button id="p" class="button button1" onclick="press(this)">Butter Dawg</button>
   </div>
 
-  <script>
-    function press(btn) {
-     const activeButtons = document.querySelectorAll(".button.active");
+  <script src="connections.js">
 
-    // If already active, allow toggle off
-    if (btn.classList.contains("active")) {
-      btn.classList.remove("active");
-    } 
-    // Otherwise, only activate if fewer than 4 are active
-    else if (activeButtons.length < 4) {
-      btn.classList.add("active");
-    } 
-    }
- 
  	
  </script>
 
