--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -91,38 +91,36 @@
 </nav>
 
 <body>
-<h1>Grid Container</h1>
+<h1>as·so·ci·a·tions</h1>
 
-<p>A grid container contains one or more grid items arranged in columns and rows.</p>
-<p>Direct child elements(s) of the grid container automatically becomes grid items.</p>
+<p>Because the NYT people are making me mad and I can make a better puzzle (with cool music)</p>
+<p>My haters said I would never start this project</p>
 
 <audio controls autoplay muted>
   <source src="gamemusic.mp3" type="audio/mpeg">
 </audio>
 
 <div class="grid-container">
-  <button id="a" class="button button1" onclick="press(this)">Green</button> 
-  <button id="b" class="button button1" onclick="press(this)">Green</button> 
-  <button id="c" class="button button1" onclick="press(this)">Green</button>
-  <button id="d" class="button button1" onclick="press(this)">Green</button>
-  <button id="e" class="button button1" onclick="press(this)">Green</button>
-  <button id="f" class="button button1" onclick="press(this)">Green</button>
-  <button id="g" class="button button1" onclick="press(this)">Green</button>
-  <button id="h" class="button button1" onclick="press(this)">Green</button>
-  <button id="i" class="button button1" onclick="press(this)">Green</button>
-  <button id="j" class="button button1" onclick="press(this)">Green</button>
-  <button id="k" class="button button1" onclick="press(this)">Green</button>
-  <button id="l" class="button button1" onclick="press(this)">Green</button>
-  <button id="m" class="button button1" onclick="press(this)">Green</button> 
-  <button id="n" class="button button1" onclick="press(this)">Green</button>
-  <button id="o"class="button button1" onclick="press(this)">Green</button>
+  <button id="a" class="button button1" onclick="press(this)">Butter Dawg</button> 
+  <button id="b" class="button button1" onclick="press(this)">Butter Dawg</button> 
+  <button id="c" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="d" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="e" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="f" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="g" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="h" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="i" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="j" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="k" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="l" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="m" class="button button1" onclick="press(this)">Butter Dawg</button> 
+  <button id="n" class="button button1" onclick="press(this)">Butter Dawg</button>
+  <button id="o"class="button button1" onclick="press(this)">Butter Dawg</button>
   <button id="p" class="button button1" onclick="press(this)">Butter Dawg</button>
   </div>
 
-  <script src="connections.js">
-
- 	
- </script>
+<button onclick="submit(this)">submit</button>
+  <script src="connections.js"></script>
 
 </body>
 
@@ -136,4 +134,5 @@
 
 
 </html>
+
 
