--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -51,7 +51,10 @@
   	padding: 10px;
   	font-size: 30px;
   	text-align: center;
-	
+
+   audio {
+      padding: 10px
+      }
     
     }
   .button {
