--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -99,7 +99,7 @@
 <p>Because the NYT people are making me mad and I can make a better puzzle (with cool music)</p>
 <p>My haters said I would never start this project</p>
 
-<audio controls autoplay muted>
+<audio controls autoplay>
   <source src="gamemusic.mp3" type="audio/mpeg">
 </audio>
 
