--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -38,7 +38,7 @@
      .grid-container {
  	
      display: grid;
-	 grid-template-columns: 110px 110px 110px 110px;
+	 grid-template-columns: auto auto auto auto;
      gap: 10px;
 	 background-color: dodgerblue;
   	 padding: 10px;
@@ -61,7 +61,7 @@
   .button {
     border: none;
     color: white;
-    width: 100px;       /* Fixed width */
+    width: auto;      
     height: 40px; 
     padding: 16px 16px:
     text-align: center;
