--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -40,7 +40,7 @@
      display: grid;
 	 grid-template-columns: auto auto auto auto;
      gap: 10px;
-	 background-color: dodgerblue;
+	 
   	 padding: 10px;
   	 align-content: space-evenly;
      justify-content: center;
@@ -59,6 +59,7 @@
     
     }
   .button {
+    border-radius: 10px;
     border: none;
     color: white;
     width: auto;      
@@ -69,7 +70,7 @@
     display: inline-block;
     font-size: 16;
     margin: 2px 2px;
-    transition-duration: 0.4s;
+    transition-duration: 0.2s;
     cursor: pointer;
   }
 
