--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -125,8 +125,10 @@
   </div>
 
 <button onclick="submit(this)">submit</button>
-  <script src="connections.js"></script>
 
+<script src="connections.js"></script>
+<p>lives: <span id="lifeCount"></span></p>
+	
 </body>
 
 <hr> 
