--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <a href="index.html">Home</a> |
   <a href="3dprinting.html">3D-Printing</a> |
   <a href="design.html">Design</a> |
-  <a href="connnectionsripoff.html">Assocications</a>
+  <a href="connnectionsripoff.html">Associations</a>
 </nav>
 
 
