--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -162,6 +162,7 @@
     		lives = 'you lose';
             const sound = new Audio('losing-horn-313723.mp3');
         	scoreElement.textContent = lives;
+		sound.play();
         } 
         }
     
