--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -36,7 +36,7 @@
     }
 
     audio {
-      padding: 10px;
+      padding: 15px;
     }
 
     .grid-container {
@@ -61,15 +61,18 @@
       border-radius: 10px;
       border: none;
       color: white;
-      width: auto;
-      height: 40px;
-      padding: 16px 16px;
+      padding: 10px 16px;
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16;
-      margin: 2px 2px;
+      font-size: 16px;
+      margin: 2px;
       cursor: pointer;
+      word-wrap: break-word;
+     
+      height: auto;           
+      max-width: 100%;        
+       
     }
 
     .button1 {
@@ -223,3 +226,4 @@
   <p>phone: 702-292-3345</p>
 </footer>
 </html>
+
