--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -41,7 +41,7 @@
 
     .grid-container {
       display: grid;
-      
+       grid-template-rows: repeat(4, minmax(50px, 100px));
      	grid-template-columns: repeat(4, minmax(100px, auto));
       padding: 5px;
       align-content: space-evenly;
