--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -296,6 +296,8 @@
     <p>Charlie Tharin</p>
     <p>email: cbtharin@gmail.com</p>
     <p>phone: 702-292-3345</p>
+    <a href="https://github.com/cbtharin/cbtharin.github.io/blob/main/connnectionsripoff.html">website documentation</a>
+    <p></p>
   </footer>
 
 </body>
