--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -125,10 +125,10 @@
     footer {
       font-size: 20px;
       background-color: #D3D3D3;
-      line-height: 1.5;
+      line-height: 0.2;
+      height: auto;
       color: black;
       border: 3px solid green;
-      padding: 1rem;
     }
   </style>
 </head>
@@ -169,6 +169,7 @@
 
   <button onclick="submit(this)">submit</button>
   <button onclick="deselect(this)">deselect</button>
+  <button onclick=randomizeGrid(this)>mix</button>
   <p>lives: <span id="lifeCount"></span></p>
 
   <div id="overlayLoss" onclick="overlayoff()">
