--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -88,9 +88,10 @@
       color: black;
     }
 
-    .button1.purple {
-      background-color: purple;
-      color: MediumOrchid;
+     .button1.purple {
+      background-color:  MediumOrchid;
+      color: black;
+    
     }
 
     #overlayWin,
