--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -150,22 +150,22 @@
   </audio>
 
   <div class="grid-container">
-    <button id="a" class="button button1" onclick="press(this)">CHICKEN</button>
-    <button id="b" class="button button1" onclick="press(this)">CHARGER</button>
-    <button id="c" class="button button1" onclick="press(this)">MELON</button>
-    <button id="d" class="button button1" onclick="press(this)">KOOL AID</button>
-    <button id="e" class="button button1" onclick="press(this)">GREEN</button>
-    <button id="f" class="button button1" onclick="press(this)">GREEN</button>
-    <button id="g" class="button button1" onclick="press(this)">GREEN</button>
-    <button id="h" class="button button1" onclick="press(this)">GREEN</button>
-    <button id="i" class="button button1" onclick="press(this)">RED</button>
-    <button id="j" class="button button1" onclick="press(this)">RED</button>
-    <button id="k" class="button button1" onclick="press(this)">RED</button>
-    <button id="l" class="button button1" onclick="press(this)">RED</button>
-    <button id="m" class="button button1" onclick="press(this)">BUTTER DAWG</button>
-    <button id="n" class="button button1" onclick="press(this)">BUTTER DAWG</button>
-    <button id="o" class="button button1" onclick="press(this)">BUTTER DAWG</button>
-    <button id="p" class="button button1" onclick="press(this)">BUTTER DAWG</button>
+    <button id="a" class="button button1" onclick="press(this)">POCKET</button>
+    <button id="b" class="button button1" onclick="press(this)">FELT</button>
+    <button id="c" class="button button1" onclick="press(this)">LEGS</button>
+    <button id="d" class="button button1" onclick="press(this)">BUMPER</button>
+    <button id="e" class="button button1" onclick="press(this)">CHICKEN</button>
+    <button id="f" class="button button1" onclick="press(this)">YELLOW</button>
+    <button id="g" class="button button1" onclick="press(this)">SOFT</button>
+    <button id="h" class="button button1" onclick="press(this)">WEAK</button>
+    <button id="i" class="button button1" onclick="press(this)">CHARGER</button>
+    <button id="j" class="button button1" onclick="press(this)">KNIFE</button>
+    <button id="k" class="button button1" onclick="press(this)">GLASS</button>
+    <button id="l" class="button button1" onclick="press(this)">CLOTH</button>
+    <button id="m" class="button button1" onclick="press(this)">MELON</button>
+    <button id="n" class="button button1" onclick="press(this)">SLIDE</button>
+    <button id="o" class="button button1" onclick="press(this)">GUN</button>
+    <button id="p" class="button button1" onclick="press(this)">GATE</button>
   </div>
 
   <button onclick="submit(this)">submit</button>
