--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -142,7 +142,7 @@
 
   <h1>as·so·ci·a·tions</h1>
 
-  <p>Because the NYT people are making me mad and I can make a better puzzle (with cool music)</p>
+  <p>Because the NYT people are making me mad and I can make a better puzzle (with cool custom music)</p>
   <p>My haters said I would never start this project</p>
 
   <audio controls autoplay>
