--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Associations</title>
+  <!-- good ol' fashion setup for how every csllefd component will look on the page -->
   <style>
     body {
       font-family: "Didot", "Bodoni MT", Didot, serif;
@@ -130,7 +131,7 @@
     }
   </style>
 </head>
-
+<!-- Componenets that are displayed in the page -->
 <body>
 
   <nav>
@@ -190,6 +191,7 @@
     <div id="text">One away!</div>
   </div>
 
+  <!-- the interesting stuff - how the game actually wokrs -->	
   <script>
     
     //I stole the mixing alg from the internet i fear (my skills will be there one day but for now I want my site to work)
