--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!-- things left to finish priority list:
+	1.display what the connection actually is
+	2.show unfound connections after the player has lost
+	3.allow users to share scores through Imessage
+	4.allow users to manuelly swap placemnt of buttons
+	5.sound effects  
+-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
