--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -151,7 +151,7 @@
   <p>My haters said I would never start this project</p>
 
   <!--Music play button-->
-  <audio controls autoplay muted>
+  <audio controls autoplay>
     <source src="gamemusic.mp3" type="audio/mpeg">
   </audio>
 
