--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -156,7 +156,7 @@
   <p>My haters said I would never start this project</p>
 
   <!--Music play button-->
-  <audio controls autoplay, loop>
+  <audio controls loop>
     <source src="gamemusic.mp3" type="audio/mpeg">
   </audio>
 
