--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -9,6 +9,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- fix view for different devices -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Associations</title>
   <!-- good ol' fashion setup for how every csllefd component will look on the page -->
