--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -157,7 +157,7 @@
   <p>My haters said I would never start this project</p>
 
   <!--Music play button-->
-  <audio controls loop>
+  <audio controls loop autoplay>
     <source src="gamemusic.mp3" type="audio/mpeg">
   </audio>
 
