--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -239,7 +239,7 @@
     <button id="m" class="button button1" onclick="press(this)">NEW WORLD</button>
     <button id="n" class="button button1" onclick="press(this)">JUPITER</button>
     <button id="o" class="button button1" onclick="press(this)">UNFINISHED</button>
-    <button id="p" class="button button1" onclick="press(this)">SURPRISE/button>
+    <button id="p" class="button button1" onclick="press(this)">SURPRISE</button>
 
   </div>
   <!--buttons at bottom of screen-->
