--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <!-- things left to finish priority list:
-	1.display what the connection actually is
-	2.show unfound connections after the player has lost
+	1.display what the connection actually is -- make this better with the words also and the text centerd
+		
+	1.show unfound connections after the player has lost
+	2.Have text shrink to fit container
 	3.allow users to share scores through Imessage
 	4.allow users to manuelly swap placemnt of buttons
 	5.sound effects  
+	6
 -->
 <html lang="en">
 <head>
