--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -8,6 +8,9 @@
 	4.allow users to manuelly swap placemnt of buttons
 	5.sound effects  
 	6. optimize whole thing especially the disgusting section that displays found conections
+	7. general look
+
+somehow this list grew significantly longer after i spent a several hours working on the site today 
 -->
 <html lang="en">
 <head>
