--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -211,7 +211,7 @@ somehow this list grew significantly longer after i spent a several hours workin
 
   <h1>as·so·ci·a·tions</h1>
 
-  <p>Because the NYT people are making me mad and I can make a better puzzle (with cool costum music)</p>
+  <p>Because the NYT people are making me mad and I can make a better puzzle (with cool music)</p>
   <p>My haters said I would never start this project</p>
 
   <!--Music play button-->
