--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -300,7 +300,7 @@ somehow this list grew significantly longer after i spent a several hours workin
     }
     
     //calling the randomizer function to randomize the grid off the start
-    //randomizeGrid()
+    randomizeGrid()
         
     //Turns the winning and losing screens off with a click
     function overlayoff() {
