--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- things left to finish priority list
+<!-- things left to finish priority list:
+	
 	1. fix mix button :(
 	1.show unfound connections after the player has lost
 	2.Have text shrink to fit container
@@ -454,7 +455,7 @@ somehow this list grew significantly longer after i spent a several hours workin
       
       const purpleEx = document.createElement("p");
       const purpleWords = document.createElement("p");
-      purpleEx.textContent = "Nicknames of Symphonies"
+      purpleEx.textContent = "Symphony Nicknames"
       solutionPurple.appendChild(purpleEx)
       solutionPurple.appendChild(purpleWords)
       purpleEx.classList.add('small-line')
@@ -536,3 +537,4 @@ const allIds = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m",
 
 </body>
 </html>
+
