--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>3D Printing - Charlie's Print Shop</title>
+  <title>About Me</title>
     <style>
     
     footer{
@@ -70,43 +70,9 @@
 </nav>
 
 <body>
-  <h1>3D-Printing Commisions </h1>
-  <p>Ispecialize in high-quality 3D printing and custom design commissions.</p>
+  <h1> </h1>
+  <p></p>
 
- 
-
-<form
-  action="https://formspree.io/f/xqaqrrlb"
-  method="POST"
->
-  <label>
-    Your Email:
-    <input type="youremail" name="youremail">
-  </label>
-  <label>
-    Your Address:
-    <input type="youraddress" name="youraddress">
-  </label>
-  <label>
-    Your Name:
-    <input name="name"> 
-  </label>
-  <label>
-      Upload your STL file:<br>
-      <input type="file" name="stl_file" accept=".stl" required />
-    </label>
-  
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-
-</form>
-  <div class="payment-section">
-    <p>After submitting your info, please complete payment:</p>
-    <a href="https://buy.stripe.com/YOUR_PAYMENT_LINK" target="_blank">
-      <button>Pay Now</button>
-    </a>
-  </div>
-</body>
 
 <hr> 
 <footer>
