--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <a href="index.html">Home</a> |
   <a href="3dprinting.html">3D-Printing</a> |
   <a href="design.html">Design</a> |
+  <a href="resume.html">About Me</a> |
   <a href="connnectionsripoff.html">Associations</a>
 </nav>
 
