--- a/resume.html
+++ b/resume.html
@@ -71,6 +71,12 @@
       line-height: 1.5;
       color: #ddd;
     }
+    
+    .footp {
+    	 color: #2c333a;
+         line-height: 1;
+         font-size: 1.2rem;
+    }
 
     .indented {
       margin-left: 20px;
@@ -153,8 +159,8 @@
   </div>
 
   <footer>
-    <p>Charlie Tharin</p>
-    <p>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
   </footer>
 
 </body>
