--- a/resume.html
+++ b/resume.html
@@ -76,6 +76,7 @@
     	 color: #2c333a;
          line-height: 1;
          font-size: 1.2rem;
+         line-height: 0.2;
     }
 
     .indented {
