--- a/front.html
+++ b/front.html
@@ -43,6 +43,14 @@
       border: 4px solid white;
     }
 
+    .blog-pic {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+    }
+
     h1, h2, h3 {
       color: #ffffff;
       margin-top: 1.5rem;
