--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -22,8 +22,8 @@ somehow this list grew significantly longer after i spent a several hours workin
     body {
       font-family: 'Franklin Gothic', sans-serif;
       padding: 2rem;
-      background-color: #46515a;
-      background-image: url('greybackround.webp');
+      background: linear-gradient(135deg, #46515a, #2c333a);
+      color: #f5f5f5;
       text-align: center;
       color: white;
       font-size: 20px;
