--- a/front.html
+++ b/front.html
@@ -120,7 +120,7 @@
   }
 
   /* Optional: container max-width */
-  .container {
+  .container-i {
     max-width: 700px;
     margin: 2rem auto;
     padding: 1rem;
@@ -131,8 +131,9 @@
   </style>
 </head>
 <body>
-<div class=container>
-  <nav>bars</nav>
+ <nav>bars</nav>
+  <div class=container>
+ 
   <h1>Charlie's Sight</h1>
   <h2>Check Out some of my projects below!</h2>
   <img class="project-img" src="IMG_3566.jpg" alt="Coffee">
