--- a/sandtable-blog.html
+++ b/sandtable-blog.html
@@ -1,1 +1,337 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Charlie's Sight</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #46515a, #2c333a);
+      color: #f5f5f5;
+    }
 
+    nav {
+      background-color: #e0e0e0;
+      padding: 10px 20px;
+      border-bottom: 3px solid #4caf50;
+    }
+
+    nav a {
+      text-decoration: none;
+      font-weight: bold;
+      color: #2c333a;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.4);
+    }
+
+    .profile-pic {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 4px solid white;
+    }
+
+    .blog-pic {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 180px;
+      height: 180px;
+      object-fit: cover;
+    }
+
+    h1, h2, h3 {
+      color: #ffffff;
+      margin-top: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+      text-align: center;
+    }
+
+    h2 {
+      font-size: 1.6rem;
+      border-bottom: 2px solid #4caf50;
+      padding-bottom: 0.3rem;
+    }
+
+    h3 {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      font-weight: 600;
+    }
+
+    p, li {
+      font-size: 1rem;
+      line-height: 1.5;
+      color: #ddd;
+    }
+    
+    .footp {
+    	 color: #2c333a;
+         line-height: 1;
+         font-size: 1.2rem;
+         line-height: 0.2;
+    }
+
+    .indented {
+      margin-left: 20px;
+    }
+
+    footer {
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: #e0e0e0;
+      color: #2c333a;
+      border-top: 3px solid #4caf50;
+      text-align: center;
+      font-size: 0.95rem;
+    }
+    /* Make images fill the width in a column */
+  .project-img {
+    display: block;
+    width: 100%;         /* Fill container width */
+    max-width: 600px;    /* Optional: prevent being too wide */
+    height: auto;        /* Maintain aspect ratio */
+    margin: 1rem auto;   /* Center and give spacing */
+    border-radius: 12px; /* Optional rounded corners */
+    transition: transform 0.3s;
+  }
+
+  .project-img:hover {
+    transform: scale(1.05); /* Slight zoom on hover */
+  }
+
+  a {
+    text-decoration: none; /* Remove underline from links */
+  }
+
+  /* Optional: container max-width */
+  .containeri {
+    max-width: 700px;
+    margin: 2rem auto;
+    padding: 1rem;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+  }
+  </style>
+</head>
+<body>
+<nav>bars</nav>
+<div class=container>
+  
+  <h1>Zen Garden Sand Table </h1>
+  <p>What is more satisfying than having a small marble move around in a thin layer of sand to create intricate patterns and designs? For a while, I have been mesmerized by such “zen garden sand tables.” Consequently, I decided to build my own. </p>
+  <img src="sandtable/sand1.avif" class="project-img" alt="Sand table design 1">
+  <p>I started by designing a platform to move a marble in Onshape (CAD application). Using a magnet under a thin layer of wood, I figured I could control the marble indirectly. My design combines 3D printed parts and various other specialized components. Zinc rods form the basis of my design. Across the zinc rods, I planned to have a 3D-printed trolleys move the magnet. The trolleys were to be controlled by a 3D printer belt and stepper motors. By finding the exact specifications for the dimensions of the Nema 17 Stepper motor, I could recreate it in Onshape to help plan out the final design. The stepper motors are then connected to belt pulleys which will be used to move the trolley.</p>
+ <img src="sandtable/sand2.avif" class="project-img" alt="Sand table design 2">
+  <p>After digitally finalizing my design, It was time to order the parts and 3D print them. All 3D printed parts were made using an Ender 3 V2  and sliced in Cura. Initially, I considered printing the belt pulley using a resin printer to encapsulate the finer details, but the Ender 3 constructed the parts adequately.</p>
+  <img src="sandtable/sand3.avif" class="project-img" alt="Sand table design 3">
+  <p>Now that the parts had printed, I began to assemble my creation. The whole device was screwed down to a large piece of plywood I found in my garage. Smaller metal dowels were used to mount the belt pulleys so they could spin freely.</p>
+  <img src="sandtable/sand4.avif" class="project-img" alt="Sand table design 4">
+  <p>Unfortunately, like any great project, this stage of construction is where my build began to suffer from some unexpected problems. First of all, everything wobbled too much. Where the zinc rods interfaced with the 3D printed parts, the poor fit was causing the trolleys to not slide easily. Secondly, I had trouble keeping the belt tight enough to move the trolley. I attempted to fix the problem of the problem of the wobbling by taping the ends of the rod. The idea was to create a tighter fit where the rods and 3D printer components met to reduce unwanted motion. This approach was unsatisfactory.</p>
+  <img src="sandtable/sand5.avif" class="project-img" alt="Sand table design 5">
+  <p>As I brainstormed, I devised several ideas to fix the wobbling. My idea to fix it was to use a third stepper motor, coordinating its action with the stepper motor held in place. This would remove any torque applied to the sliding cart and, therefore, reduce sway. My other idea was to use a system of gears to redirect force from a single stepper motor to both sides of the trolley, essentially creating the same end result as in my first idea. If any of the aforementioned ideas didn’t make much sense or seemed needlessly complicated, you are exactly right. I had overlooked the simple solution of fixing a rigid object to the bottom of the cart. All excess movement was removed by screwing in a piece of plywood (depicted above). Now, the trolley moved freely across the other zinc rods. This dilemma demonstrated to me that sometimes the simplest solution is the best solution.<p>
+  <img src="sandtable/sand6.avif" class="project-img" alt="Sand table design 6">
+  <p>To increase the tension on the belt, I nailed a block of wood to the plywood base and put a screw into it. While this is not the most eloquent (or best) solution, it works fine for my first iteration of this machine. Ben Anderson, a family friend, also gave me his design for a clip that securely holds the belt to the trolleys. Now, all the mechanical problems were solved. In the future, I plan to continue working on the design to further reduce friction and increase stability.<p>
+  <img src="sandtable/sand7.avif" class="project-img" alt="Sand table design 7">
+  <p>After getting the physical structure of the zen garden table running, it was time to start integrating the electronics. I began by working on the stepper motors. To control them, I am using a DRV8825 driver attached to an expansion board (to make wire connections easily). The expansion boards are connected to a central Arduino megaboard that runs the whole machine. Both motors are powered in series by a 48-watt, 2-amp power block. A small potentiometer on top next to their heat sink can be adjusted to ensure that the drivers are not feeding the motor too much electricity. While changing the potentiometer, one of the drivers was short-circuited (screwdriver connected to two prongs), destroying it. Another driver was lost when a small component was accidentally snapped off its top, and a final driver had a factory defect. Fortunately, the drivers are relatively cheap (although now I cannot claim that no drivers were harmed in the creation of this machine). Learning how to control the motors was a new challenge as, before this project, I lacked experience working with the electronics mentioned previously. In the process, I learned a lot about programming and circuitry. </p>
+   <img src="sandtable/sand8.avif" class="project-img" alt="Sand table design 8">
+    <img src="sandtable/sand9.avif" class="project-img" alt="Sand table design 9">
+ <img src="sandtable/sand9=10.avif" class="project-img" alt="Sand table design 10">
+  <img src="sandtable/sand11.avif" class="project-img" alt="Sand table design 11">
+  <p>Next, I began building the platform that would rest on the machine. This platform would contain the sand. A piece of hardboard wall panel was cut using a table saw. This panel was then glued to some old decorative wood pieces cut with a miter saw. Sand was poured inside.</p>
+  <img src="sandtable/sand12.avif" class="project-img" alt="Sand table design 12">
+  <p>Finally, my sand table was coming together. Despite this, it still needed some aesthetic appeal. My mom generously provided some decorations and fine-grain blue sand to remedy this (depicted on the right).
+
+	All that was left to do was to  program the machine to make satisfying patterns in the sand. Unfortunatley, I had no idea how to do this. Thankfully, Ben Anderson was once again happy to lend his expertise and help me begin the process. 
+
+	After some research and consulting, I decided to use GRBL to operate the table. GRBL is an open soruce software meant to run on Arduino for CNC milling machines. This is the github link:
+
+https://github.com/grbl/grbl
+
+GRBL allows the user to send g-code directly to the arduino which dicates the movements of the motors within a virtual space. By downloading and calibrating Universal G-Code Sender (UGCS) to operate within the spefications of my machine, the task of creating intricate patterns in the sand was a simple as creating or finding G-code to send. (Less simple than anticipated). However, using Inkscape's software I was able to find images of geometric patterns and then convert them to SVG (a vector based graphic format). This allows another software such as G-Code Generator to convert the given images into G-Code which can be sent using UGCS. Additionally, simple patterns can be written by hand. Every command begins with G followed by a number. For instance, G01 is a linear movement, and G02 is a counter-clockwise arc. Each G# can then be followed by cordinates specifying where the motors should move to. Here is an exaple of a code I wrote:
+
+
+
+%
+
+G21              ; Set units to millimeters
+
+G17              ; Select XY plane
+
+G90              ; Absolute positioning
+
+
+
+; Parameters
+
+G0 X0 Y0         ; Move to home position (optional)
+
+G0 Z5            ; Move Z axis up to a safe height (adjust as necessary)
+
+
+
+; Starting point for the largest rectangle
+
+G0 X-100 Y-100   ; Move to the start of the largest rectangle
+
+
+
+; Largest rectangle (200mm x 200mm)
+
+G0 X100 Y-100    ; Move to the top-right corner
+
+G0 X100 Y100     ; Move to the bottom-right corner
+
+G0 X-100 Y100    ; Move to the bottom-left corner
+
+G0 X-100 Y-100   ; Move to the top-left corner
+
+
+
+; Reduce rectangle size by 20mm on each side and repeat
+
+G0 X-90 Y-90
+
+G0 X90 Y-90
+
+G0 X90 Y90
+
+G0 X-90 Y90
+
+G0 X-90 Y-90
+
+
+
+G0 X-80 Y-80
+
+G0 X80 Y-80
+
+G0 X80 Y80
+
+G0 X-80 Y80
+
+G0 X-80 Y-80
+
+
+
+G0 X-70 Y-70
+
+G0 X70 Y-70
+
+G0 X70 Y70
+
+G0 X-70 Y70
+
+G0 X-70 Y-70
+
+
+
+G0 X-60 Y-60
+
+G0 X60 Y-60
+
+G0 X60 Y60
+
+G0 X-60 Y60
+
+G0 X-60 Y-60
+
+
+
+G0 X-50 Y-50
+
+G0 X50 Y-50
+
+G0 X50 Y50
+
+G0 X-50 Y50
+
+G0 X-50 Y-50
+
+
+
+G0 X-40 Y-40
+
+G0 X40 Y-40
+
+G0 X40 Y40
+
+G0 X-40 Y40
+
+G0 X-40 Y-40
+
+
+
+G0 X-30 Y-30
+
+G0 X30 Y-30
+
+G0 X30 Y30
+
+G0 X-30 Y30
+
+G0 X-30 Y-30
+
+
+
+G0 X-20 Y-20
+
+G0 X20 Y-20
+
+G0 X20 Y20
+
+G0 X-20 Y20
+
+G0 X-20 Y-20
+
+
+
+G0 X-10 Y-10
+
+G0 X10 Y-10
+
+G0 X10 Y10
+
+G0 X-10 Y10
+
+G0 X-10 Y-10
+
+
+
+G0 X0 Y0         ; Return to the center
+
+G0 Z5            ; Move Z axis up to a safe height
+
+
+
+M30              ; End of program
+
+%
+
+This code yields this pattern:<p>
+<img src="sandtable/sand13.avif" class="project-img" alt="Sand table design 13">
+<p>While the machine is currently working, there are some improvements I wouldm like to add to it in the future. I do not like how the ball jitters on the table. This is because the magnet being used is not strong enough to keep the ball in one postion. Additionally, I would like to add limit switches to the boundaries of the machine so it can hone automatically and have build in protection against moving outside of its parameters. In the meantime, I have 3D printed this box with a fan to protect the arduino board.<p>
+<img src="sandtable/sand14.avif" class="project-img" alt="Sand table design 14">
+
+</div>
+<footer>
+      <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+
+</footer>
