--- a/front.html
+++ b/front.html
@@ -132,14 +132,26 @@
 </head>
 <body>
  <nav>bars</nav>
-  <div class=container>
+  
  
+  <div class="container">
   <h1>Charlie's Sight</h1>
   <h2>Check Out some of my projects below!</h2>
-  <img class="project-img" src="IMG_3566.jpg" alt="Coffee">
-  <img class="project-img" src="rocket .png" alt="Rocket">
-  <img class="project-img"src="jet.jpg" alt="jet">
+
+  <!-- Each image links to its own project page -->
+  <a href="sandtable.html">
+    <img class="project-img" src="IMG_3566.jpg" alt="Sand Table Project">
+  </a>
+
+  <a href="rocket.html">
+    <img class="project-img" src="rocket.png" alt="Rocket Project">
+  </a>
+
+  <a href="jet.html">
+    <img class="project-img" src="jet.jpg" alt="Jet Project">
+  </a>
 </div>
+
 <footer>
   
 </footer>
