--- a/front.html
+++ b/front.html
@@ -140,7 +140,7 @@
 
   <!-- Each image links to its own project page -->
   <a href="sandtable.html">
-    <img class="project-img" src="IMG_3566.jpg" alt="Sand Table Project">
+    <img src="sandtable/sand10.avif" class="project-img" alt="Sand table design 10">
   </a>
 
   <a href="rocket.html">
