--- a/front.html
+++ b/front.html
@@ -139,7 +139,7 @@
   <h2>Check Out some of my projects below!</h2>
 
   <!-- Each image links to its own project page -->
-  <a href="sandtable.html">
+  <a href="sandtable-blog.html">
     <img src="sandtable/sand10.avif" class="project-img" alt="Sand table design 10">
   </a>
 
