--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	
 <nav>
   <a href="index.html">Home</a> |
-  <a href="sandtable-blog.html">3D-Printing</a> |
+  <a href="Front.html">3D-Printing</a> |
   <a href="design.html">Design</a> |
   <a href="resume.html">About Me</a> |
   <a href="connnectionsripoff.html">Associations</a>
