--- a/front.html
+++ b/front.html
@@ -131,7 +131,13 @@
   </style>
 </head>
 <body>
- <nav>bars</nav>
+ <nav>
+  <a href="index.html">Home</a> |
+  <a href="front.html">3D-Printing</a> |
+  <a href="design.html">Design</a> |
+  <a href="resume.html">About Me</a> |
+  <a href="connnectionsripoff.html">Associations</a>
+</nav>
   
  
   <div class="container">
