--- a/resume.html
+++ b/resume.html
@@ -97,8 +97,12 @@
 <body>
 
   <nav>
-    <a href="index.html">← Back to Home</a>
-  </nav>
+  <a href="index.html">Home</a> |
+  <a href="front.html">3D-Printing</a> |
+  <a href="design.html">Design</a> |
+  <a href="resume.html">About Me</a> |
+  <a href="connnectionsripoff.html">Associations</a>
+</nav>
 
   <div class="container">
     <img src="Charlie.jpg" alt="Charlie Tharin" class="profile-pic">
