--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -43,10 +43,15 @@ somehow this list grew significantly longer after i spent a several hours workin
     }
 
     nav {
-      background-color: #D3D3D3;
-      border: 3px solid green;
-      color: black;
-      padding: 1rem;
+      background-color: #e0e0e0;
+      padding: 10px 20px;
+      border-bottom: 3px solid #4caf50;
+    }
+
+    nav a {
+      text-decoration: none;
+      font-weight: bold;
+      color: #2c333a;
     }
 
     audio {
