--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -205,13 +205,26 @@ somehow this list grew significantly longer after i spent a several hours workin
       transform: translate(-50%, -50%);
     }
 
+     .footp {
+    	 color: #2c333a;
+         line-height: 1;
+         font-size: 1.2rem;
+         line-height: 0.2;
+    }
+
+    .indented {
+      margin-left: 20px;
+    }
+
     footer {
-      font-size: 20px;
-      background-color: #D3D3D3;
-      line-height: 0.2;
-      height: auto;
-      color: black;
-      border: 3px solid green;
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: #e0e0e0;
+      color: #2c333a;
+      border-top: 3px solid #4caf50;
+      text-align: center;
+      font-size: 0.95rem;
+    }
     }
   </style>
 </head>
