--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -232,8 +232,12 @@ somehow this list grew significantly longer after i spent a several hours workin
 <body>
 
   <nav>
-    <p><a href="index.html">← Back to Home</a></p>
-  </nav>
+  <a href="index.html">Home</a> |
+  <a href="sandtable-blog.html">3D-Printing</a> |
+  <a href="design.html">Design</a> |
+  <a href="resume.html">About Me</a> |
+  <a href="connnectionsripoff.html">Associations</a>
+</nav>
 
   <h1>as·so·ci·a·tions</h1>
 
