--- a/resume.html
+++ b/resume.html
@@ -98,8 +98,7 @@
 
   <nav>
   <a href="index.html">Home</a> |
-  <a href="front.html">3D-Printing</a> |
-  <a href="design.html">Design</a> |
+  <a href="front.html">Blog</a> |
   <a href="resume.html">About Me</a> |
   <a href="connnectionsripoff.html">Associations</a>
 </nav>
