--- a/front.html
+++ b/front.html
@@ -133,8 +133,7 @@
 <body>
  <nav>
   <a href="index.html">Home</a> |
-  <a href="front.html">3D-Printing</a> |
-  <a href="design.html">Design</a> |
+  <a href="front.html">Blog</a> |
   <a href="resume.html">About Me</a> |
   <a href="connnectionsripoff.html">Associations</a>
 </nav>
