--- a/sandtable-blog.html
+++ b/sandtable-blog.html
@@ -131,7 +131,7 @@
   </style>
 </head>
 <body>
-<nav><a href="index.html">← Back to Blog</a></nav>
+<nav><a href="front.htlm">← Back to Blog</a></nav>
 <div class=container>
   
   <h1>Zen Garden Sand Table </h1>
