--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -23,6 +23,7 @@ somehow this list grew significantly longer after i spent a several hours workin
       background-color: #e0e0e0;
       padding: 10px 20px;
       border-bottom: 3px solid #4caf50;
+	 text-align: left;
     }
 
     nav a {
