--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -240,8 +240,7 @@ somehow this list grew significantly longer after i spent a several hours workin
 <!-- Componenets that are displayed in the page -->
  <nav>
   <a href="index.html">Home</a> |
-  <a href="sandtable-blog.html">3D-Printing</a> |
-  <a href="design.html">Design</a> |
+  <a href="front.html">Blog</a> |
   <a href="resume.html">About Me</a> |
   <a href="connnectionsripoff.html">Associations</a>
 </nav>
@@ -568,7 +567,7 @@ const allIds = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m",
     <p class="footp">Charlie Tharin</p>
     <p class="footp">email: cbtharin@gmail.com</p>
     <p class="footp">phone: 702-292-3345</p>
-    <a href="https://github.com/cbtharin/cbtharin.github.io/blob/main/connnectionsripoff.html">website documentation</a>
+    
     <p></p>
   </footer>
 
