--- a/front.html
+++ b/front.html
@@ -158,5 +158,6 @@
 </div>
 
 <footer>
-  
-</footer>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+  </footer>
