--- a/index.html
+++ b/index.html
@@ -181,16 +181,10 @@
 <hr>
 
 <footer>
-	<p class="footp">Charlie Tharin</p>
-    <p class="footp">email: cbtharin@gmail.com</p>
-    <p class="footp">phone: 702-292-3345</p>
-    
-</footer>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+  </footer>
 
 
 <html>
     
-</footer>
-
-
-<html>
