--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -564,11 +564,8 @@ const allIds = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m",
   <hr>
   
   <footer>
-    <p class="footp">Charlie Tharin</p>
-    <p class="footp">email: cbtharin@gmail.com</p>
-    <p class="footp">phone: 702-292-3345</p>
-    
-    <p></p>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
   </footer>
 
 </body>
