--- a/sandtable-blog.html
+++ b/sandtable-blog.html
@@ -131,7 +131,12 @@
   </style>
 </head>
 <body>
-<nav><a href="index.htlm">← Back to Blog</a></nav>
+<nav>
+  <a href="index.html">Home</a> |
+  <a href="front.html">Blog</a> |
+  <a href="resume.html">About Me</a> |
+  <a href="connnectionsripoff.html">Associations</a>
+</nav>
 <div class=container>
   
   <h1>Zen Garden Sand Table </h1>
