--- a/connnectionsripoff.html
+++ b/connnectionsripoff.html
@@ -563,9 +563,10 @@ const allIds = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m",
   <!-- little line boi to seperate fotter -->
   <hr>
   
-  <footer>
+ <footer>
     <p class='footp'>Charlie Tharin</p>
-    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
+    <p class='footp'>Email: cbtharin@gmail.com</p>
+    <p class='footp'>Phone: 702-292-3345</p>
   </footer>
 
 </body>
