--- a/front.html
+++ b/front.html
@@ -158,8 +158,8 @@
 </div>
 
 <footer>
-      <p class='footp'>Charlie Tharin</p>
-    <p class='footp'>Email: cbtharin@gmail.com | Phone: 702-292-3345</p>
-
-</footer>
+    <p class='footp'>Charlie Tharin</p>
+    <p class='footp'>Email: cbtharin@gmail.com</p>
+    <p class='footp'>Phone: 702-292-3345</p>
+  </footer>
 </html>
